     in the [micro_ai] tag
 * Language and i18n:
   * Updated translations: Scottish Gaelic
 * User interface:
   * Fixed minimap buttons appearing without contents or in the wrong state
     during WML start events until they are interacted with or control is given
     to the player for the first time or some other unspecified thing happens.
 * Miscellaneous and bug fixes:
   * Fixed bug #23445: set default build type in cmake to "Release" to ensure
     that the game is not unoptimized
   * Made the file chooser dialog (used for e.g. loading maps in the editor)
     use uniform path delimiters on Windows, fixing issues with browsing to
     parent directories (bug #23224).

Version 1.12.2:
 * Security fixes:
   * Fixed arbitrary file read by WML/Lua API (CVE-2015-0844, bug #23440).
 * AI:
   * Bottleneck Micro AI: bug fix for case when allied units are present
   * Forest Animals Micro AI: bug fix for wander terrain lying on border hexes
   * Herding Micro AI: bug fix for dogs sometimes having moves left at end
 * Campaigns:
   * Use the new bigmaps for A Tale of Two Brothers, Delfadors Memoirs, The
     Hammer of Thursagan, Northern Rebirth and the epilogue of Legend of
     Wesmere.
   * Under the Burning Suns:
     * Subterranean Struggle: fixed enemy reinforcements event never triggering.
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Chinese (Traditional),
     Galician, German, Polish, Scottish Gaelic, Spanish
 * User interface:
   * Fix bug #22984: Sliders (GUI1) focusing improperly in non-game contexts,
    and not responding to left-right key press
 * Miscellaneous and bug fixes:
   * Fix OOS when undoing after deactivating delayed shroud updates.
   * Eliminate local carryover info retained by clients when transitioning in MP
     campaigns, which seems to cause OOS and wrong carryover gold (bug #22936).
   * Fix bug #23426: Terrain Description action works on shrouded hexes.