@@ -231,200 +231,215 @@
 
 				[column]
 					grow_factor = 1
-
-					border = "all"
-					border_size = 5
-					horizontal_alignment = "left"
-					[label]
-						definition = "title"
-
-						label = _ "Moderating"
-					[/label]
-
-				[/column]
-
-			[/row]
-
-			[row]
-				grow_factor = 0
-
-				[column]
-					grow_factor = 1
-
 					horizontal_grow = "true"
 
 					[grid]
-
-						[row]
-							grow_factor = 1
-
-							[column]
-								grow_factor = 0
-
-								border = "all"
-								border_size = 5
-								horizontal_alignment = "left"
-
-								[label]
-									definition = "default"
-
-									label = _ "Reason:"
-								[/label]
-
-							[/column]
-
-							[column]
-								grow_factor = 1
-
-								border = "all"
-								border_size = 5
-								horizontal_alignment = "right"
-
-								[text_box]
-									id = "reason"
-									definition = "default"
-
-									label = ""
-								[/text_box]
-
-							[/column]
-
-						[/row]
-
-					[/grid]
-
-				[/column]
-
-			[/row]
-
-			[row]
-				grow_factor = 0
-
-				[column]
-					grow_factor = 1
-
-					horizontal_grow = "true"
-
-					[grid]
-
-						[row]
-							grow_factor = 1
-
-							[column]
-								grow_factor = 0
-
-								border = "all"
-								border_size = 5
-								horizontal_alignment = "left"
-
-								[label]
-									definition = "default"
-
-									label = _ "Time:"
-								[/label]
-
-							[/column]
-
-							[column]
-								grow_factor = 1
-
-								border = "all"
-								border_size = 5
-								horizontal_alignment = "right"
-
-								[text_box]
-									id = "time"
-									definition = "default"
-
-									label = ""
-								[/text_box]
-
-							[/column]
-
-						[/row]
-
-					[/grid]
-
-				[/column]
-
-			[/row]
-
-			[row]
-				grow_factor = 0
-
-				[column]
-					grow_factor = 1
-					horizontal_grow = "true"
-
-					[grid]
+						id = "mod_options"
 
 						[row]
 							grow_factor = 0
 
 							[column]
-								horizontal_grow = "true"
+								grow_factor = 1
 
 								border = "all"
 								border_size = 5
+								horizontal_alignment = "left"
+								[label]
+									definition = "title"
 
-								[button]
-									definition = "default"
-									id = "status"
-
-									label = _ "Status"
-								[/button]
+									label = _ "Moderating"
+								[/label]
 
 							[/column]
 
+						[/row]
+
+						[row]
+							grow_factor = 0
+
 							[column]
+								grow_factor = 1
+
 								horizontal_grow = "true"
 
-								border = "all"
-								border_size = 5
+								[grid]
 
-								[button]
-									definition = "default"
-									id = "kick"
+									[row]
+										grow_factor = 1
 
-									label = _ "Kick"
-								[/button]
+										[column]
+											grow_factor = 0
+
+											border = "all"
+											border_size = 5
+											horizontal_alignment = "left"
+
+											[label]
+												definition = "default"
+
+												label = _ "Reason:"
+											[/label]
+
+										[/column]
+
+										[column]
+											grow_factor = 1
+
+											border = "all"
+											border_size = 5
+											horizontal_alignment = "right"
+
+											[text_box]
+												id = "reason"
+												definition = "default"
+
+												label = ""
+											[/text_box]
+
+										[/column]
+
+									[/row]
+
+								[/grid]
 
 							[/column]
 
+						[/row]
+
+						[row]
+							grow_factor = 0
+
 							[column]
+								grow_factor = 1
+
 								horizontal_grow = "true"
 
-								border = "all"
-								border_size = 5
+								[grid]
 
-								[button]
+									[row]
+										grow_factor = 1
+
+										[column]
+											grow_factor = 0
+
+											border = "all"
+											border_size = 5
+											horizontal_alignment = "left"
+
+											[label]
+												definition = "default"
+
+												label = _ "Time:"
+											[/label]
+
+										[/column]
+
+										[column]
+											grow_factor = 1
+
+											border = "all"
+											border_size = 5
+											horizontal_alignment = "right"
+
+											[text_box]
+												id = "time"
+												definition = "default"
+
+												label = ""
+											[/text_box]
+
+										[/column]
+
+									[/row]
+
+								[/grid]
+
+							[/column]
+
+						[/row]
+
+						[row]
+							grow_factor = 0
+
+							[column]
+								grow_factor = 1
+								horizontal_grow = "true"
+
+								[grid]
+
+									[row]
+										grow_factor = 0
+
+										[column]
+											horizontal_grow = "true"
+
+											border = "all"
+											border_size = 5
+
+											[button]
+												definition = "default"
+												id = "status"
+
+												label = _ "Status"
+											[/button]
+
+										[/column]
+
+										[column]
+											horizontal_grow = "true"
+
+											border = "all"
+											border_size = 5
+
+											[button]
+												definition = "default"
+												id = "kick"
+
+												label = _ "Kick"
+											[/button]
+
+										[/column]
+
+										[column]
+											horizontal_grow = "true"
+
+											border = "all"
+											border_size = 5
+
+											[button]
+												definition = "default"
+												id = "ban"
+
+												label = _ "Ban"
+											[/button]
+
+										[/column]
+
+									[/row]
+
+								[/grid]
+
+							[/column]
+
+						[/row]
+
+						[row]
+							grow_factor = 0
+
+							[column]
+								grow_factor = 1
+								border = "top"
+								border_size = 30
+								[spacer]
 									definition = "default"
-									id = "ban"
-
-									label = _ "Ban"
-								[/button]
+								[/spacer]
 
 							[/column]
 
 						[/row]
 
 					[/grid]
-
-				[/column]
-
-			[/row]
-
-
-			[row]
-				grow_factor = 0
-
-				[column]
-					grow_factor = 1
-					border = "top"
-					border_size = 30
-					[spacer]
-						definition = "default"
-					[/spacer]
 
 				[/column]
 
