@@ -10,6 +10,8 @@ Version 1.12.2+dev:
    * Fixed minimap buttons appearing without contents or in the wrong state
      during WML start events until they are interacted with or control is given
      to the player for the first time or some other unspecified thing happens.
+   * Hide mod options from the user command prompt dialog in the MP lobby when
+     not authenticated as a mod.
  * Miscellaneous and bug fixes:
    * Fixed bug #23445: set default build type in cmake to "Release" to ensure
      that the game is not unoptimized
